deploy/novaride/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novaride-api
spec:
  selector:
    app: novaride-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
